feat(server): 添加MongoDB支持用于分析日志
添加dotenv和mongoose依赖，实现任务发布和抢单的日志记录功能
更新.gitignore文件，增加更多忽略规则保护敏感信息

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,44 @@
-"node_modules" 
-".env" 
-".DS_Store" 
+# ---------------------------------
+# 1. 核心安全 (绝对不能上传！！！)
+# ---------------------------------
+.env
+.env.local
+.env.*.local
+# 如果你有专门给后端用的 env 文件
+server/.env
+client/.env
+
+# ---------------------------------
+# 2. 依赖包 (体积巨大，不需要上传)
+# ---------------------------------
+node_modules/
+**/node_modules/
+
+# ---------------------------------
+# 3. 构建产物 (自动生成的，不需要上传)
+# ---------------------------------
+dist/
+build/
+client/dist/
+
+# ---------------------------------
+# 4. 系统垃圾文件
+# ---------------------------------
+.DS_Store
+Thumbs.db
+
+# ---------------------------------
+# 5. 编辑器配置 (个人偏好，不需要共享)
+# ---------------------------------
+.vscode/
+.idea/
+
+# ---------------------------------
+# 6. 日志文件
+# ---------------------------------
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
